@@ -1,5 +1,9 @@
 Version 5.5 (?? 2014)
   * Improved document for croston()
+  * Added stlm() and forecast.stlm() functions, and added forecastfunction as a way of specifying
+    a forecast method in stlf() and forecast.stl().
+  * Improved forecast.ar() so that it is more likely to work if ar() and forecast.ar() are
+    embedded within other functions.
 
 Version 5.4 (8 May 2014)
   * Fixed bug in forecast.tbats() and forecast.bats() when ts.frequency does not match seasonal.periods.
